...
            "value": "Import as service"
          }
        },
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Импортировать как сервис"
          }
        }
      }
    },
    "Import as-is": {
      "extractionState": "manual",
...
            "value": "Leave out"
          }
        },
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Пропустить"
          }
        }
      }
    },
    "About %1$@ more per month at today's prices": {
      "extractionState": "manual",
...
